--- a/wwwroot/sass/partials/_intro.scss
+++ b/wwwroot/sass/partials/_intro.scss
@@ -10,13 +10,13 @@
 	& h1 {
 		font-size: 32px;
 		font-weight: 400;
-		color: #fff;
+		color: $white-color;
 	}
 
 	& p {
 		max-width: 500px;
 		margin-top: 20px;
-		color: #fff;
+		color: $white-color;
 	}
 
 	& .announcement {
