--- a/wwwroot/sass/partials/_section-about-us.scss
+++ b/wwwroot/sass/partials/_section-about-us.scss
@@ -3,10 +3,6 @@
 		text-align: center;
 	}
 
-	& > p {
-		padding-top: 35px;
-	}
-
 	& .general-link {
 		display: block;
 	}
